phrase now displayed as gray blocks

--- a/index.html
+++ b/index.html
@@ -10,48 +10,15 @@
 
 		<!-- phrase -->
 		<div class="phrase">
-			<div class="word">
+			<!-- <div class="word">
 				<div class="letter"></div>
 				<div class="letter"></div>
 				<div class="letter"></div>
 				<div class="letter"></div>
 			</div>
 
-			<div class="space"></div>
+			<div class="space"></div> -->
 
-			<div class="word">
-				<div class="letter"></div>
-				<div class="letter"></div>
-				<div class="letter"></div>
-				<div class="letter"></div>
-				<div class="letter"></div>
-				<div class="letter"></div>
-			</div>
-
-			<div class="space"></div>
-
-			<div class="word">
-				<div class="letter"></div>
-				<div class="letter"></div>
-				<div class="letter"></div>
-				<div class="letter"></div>
-				<div class="letter"></div>
-				<div class="letter"></div>
-				<div class="letter"></div>
-				<div class="letter"></div>
-				<div class="letter"></div>
-			</div>
-
-			<div class="space"></div>
-
-			<div class="word">
-				<div class="letter"></div>
-				<div class="letter"></div>
-				<div class="letter"></div>
-				<div class="letter"></div>
-				<div class="letter"></div>
-				<div class="letter"></div>
-			</div>	
 		</div>
 
 		<!-- alphabet -->
