alphabet keys react when clicked by user

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 		<!-- alphabet -->
 		<div class="alphabet">
-			<div class="letter wrong">
+			<div class="letter">
 				<p>A</p>
 			</div>
 			<div class="letter">
@@ -35,7 +35,7 @@
 			<div class="letter">
 				<p>D</p>
 			</div>
-			<div class="letter right">
+			<div class="letter">
 				<p>E</p>
 			</div>
 			<div class="letter">
