guesses tracked and indicated in ui

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
 		<!-- guesses -->
 		<div class="guesses">
-			<div class="guess spent"></div>
+			<div class="guess"></div>
 			<div class="guess"></div>
 			<div class="guess"></div>
 			<div class="guess"></div>
