fixed issues with letter display

--- a/index.html
+++ b/index.html
@@ -10,15 +10,6 @@
 
 		<!-- phrase -->
 		<div class="phrase">
-			<!-- <div class="word">
-				<div class="letter"></div>
-				<div class="letter"></div>
-				<div class="letter"></div>
-				<div class="letter"></div>
-			</div>
-
-			<div class="space"></div> -->
-
 		</div>
 
 		<!-- alphabet -->
@@ -35,9 +26,7 @@
 			<div class="letter">
 				<p>D</p>
 			</div>
-			<div class="letter">
-				<p>E</p>
-			</div>
+			<div class="letter"><p>E</p></div>
 			<div class="letter">
 				<p>F</p>
 			</div>
