--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
 			<div class="letter">
 				<p>D</p>
 			</div>
-			<div class="letter"><p>E</p></div>
+			<div class="letter">
+				<p>E</p>
+			</div>
 			<div class="letter">
 				<p>F</p>
 			</div>
