--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Guess the Phrase Game</title>
+	<link href="https://fonts.googleapis.com/css?family=Anonymous+Pro|Lora" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
@@ -103,6 +104,14 @@
 			<div class="guess"></div>
 		</div>
 
+	</div>
+
+	<div class="overlay">
+		<div class="inner-overlay">
+			<h1>Guess That Phrase</h1>
+			<p>Guess letters to fill in the phrase.</br> Be careful! You only get <strong>five</strong> misses!</p>
+			<button>Start Game</button>
+		</div>
 	</div>
 
 	<script type="text/javascript" src="js/app.js"></script>
