basic css for guess phrase option

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 </head>
 <body>
 
+	<div class="final_guess">
+		<button>Guess Word</button>
+	</div>
+
 	<div class="wrapper">
 
 		<!-- phrase -->
